Sort of fixed spacing with flex

--- a/css/profile.css
+++ b/css/profile.css
@@ -5,54 +5,31 @@
 }
 
 body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
     padding: 24px;
     min-height: 100vh;
     min-width: 100%;
     overflow-x: hidden;
-}
-
-body#home {
     background-image: url("../img/lake.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 20% 60%;
 }
 
-body#experience {
-    background-image: url("../img/lake.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 20% 60%;
+main {
+    flex: 1;
+    margin: 10px;
 }
 
-body#about {
-    background-image: url("../img/lake.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 20% 60%;
-
-}
-
-div#experience {
-    background: rgba(204, 204, 204, 0.5);
-    border-radius: 25px;
-    padding: 12px;
-    margin-top: 12px;
-    width: 40%;
-}
-
-div#about {
-    background: rgba(204, 204, 204, 0.7);
-    border-radius: 25px;
-    margin-top: 12px;
-    padding: 12px;
-    width: 50%;
+body#experience,body#about {
+    box-shadow: inset 0 0 0 100vmax rgba(204, 204, 204, 0.3)
 }
 
 footer {
-    position: absolute;
+    margin-top: 25px;
     min-width: 100%;
-    bottom: 0;
     text-align: center;
 }
 
@@ -60,6 +37,7 @@ h1.name {
     font-family: 'Crimson Text', serif;
     font-size: 84px;
     display: inline;
+    float: left;
 }
 
 h1.sub {
@@ -95,8 +73,8 @@ ul {
 }
 
 ul#hobbies {
-    padding: 20px;
-    list-style-type: circle;
+    padding-left: 40px;
+    list-style-type: disc;
 }
 
 li#experience {
